Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68035

Camera (QML) not reconnecting after disconnect

    XMLWordPrintable

Details

    Description

      Using Qt's existing example multimedia/declarative-camera, when an external webcam is connected and physically removed from pc and then reconnected, video stopped even after reconnect.

      Steps to reproduce:

      • Start the application with the Camera disconnected, nothing is shown, but if later connect it and switch e.g. from video to photo mode, the image is correctly displayed.
      • Start the application with the Camera connected, the image is correctly displayed. But if later disconnect and connect it again, the image is lost and switching the mode does not show it.

      "Graph failed to connect filters -2147024809" error message is shown in Qt Creator.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes