src/plugins/directshow/camera/dscameracontrol.cpp
@@ -51,8 +51,12 @@ DSCameraControl::DSCameraControl(QObject *parent)
     , m_captureMode(QCamera::CaptureStillImage)
 {
     m_session = qobject_cast<DSCameraSession*>(parent);
-    connect(m_session, SIGNAL(statusChanged(QCamera::Status)),
-            this, SIGNAL(statusChanged(QCamera::Status)));
+    connect(m_session, &DSCameraSession::statusChanged,
+            [&](QCamera::Status status) {
+                if (status == QCamera::UnloadedStatus)
+                    m_state = QCamera::UnloadedState;
+                emit statusChanged(status);
+            });
     connect(m_session, &DSCameraSession::cameraError,
             this, &DSCameraControl::error);
 }
